<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vesaf.vesafrijling_pset6.OverviewActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:id="@+id/listView" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridLayout">

        <TextView
            android:text="@string/budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/budgetTextView"
            android:layout_column="0"
            android:layout_row="0" />

        <TextView
            android:text="@string/expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expensesTextView"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:text="@string/money_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/differenceTextView"
            android:layout_column="2"
            android:layout_row="0"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/title"
            android:ems="10"
            android:id="@+id/titleEditText"
            android:width="100dp"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/amountEditText"
            android:width="100dp"
            android:hint="@string/expense"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="addExpense"
            android:layout_row="1"
            android:layout_column="2" />

    </GridLayout>
</LinearLayout>
